# spotifar

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  COMPILING.md  LICENSE  README.md  build.bat  configure.bat  todo.txt  vcpkg.json
.cargo/: config.toml
.github/workflows/: build-and-package.yml  build-library.yml  build-librespot.yml  cmake-single-platform.yml  package-all.yml  package-releases.yml  quick-build-and-test.yml
cmake/: GenerateGuids.cmake
docs/: lngEng.lng  spotifar_eng.hlf  spotifar_eng.lng  spotifar_rus.hlf  spotifar_rus.lng
include/: browser.hpp  config.hpp  data_provider.hpp  spotifar.hpp  utils.hpp
misc/: vsdevcmd.cmd
misc/docs/: spotifar_eng.hlf  spotifar_eng.lng  spotifar_rus.lng
spotify-http-relay/: CMakeLists.txt
spotify-http-relay/include/: stdafx.h
spotify-http-relay/src/: entry.cpp
src/: CMakeLists.txt  abstract.hpp  browser.cpp  browser.hpp  config.cpp  config.hpp  data_provider.cpp  guid.hpp  hotkeys_handler.cpp  hotkeys_handler.hpp  librespot.cpp  librespot.hpp  lng.hpp  playback_handler.cpp  playback_handler.hpp  plugin.cpp  plugin.h  spotifar.cpp  spotifar.hpp  spotifar.vc.def  spotify.cpp  spotify.hpp  stdafx.h  utils.cpp  utils.hpp  version.hpp  version.hpp.in
src/common/: items.cpp  items.hpp
src/spotify/: abstract.hpp  api.cpp  api.hpp  auth.cpp  auth.hpp  cache.cpp  cache.hpp  cached_value.hpp  collection.cpp  collection.hpp  common.cpp  common.hpp  controller.cpp  controller.hpp  devices.cpp  devices.hpp  history.cpp  history.hpp  interfaces.hpp  items.cpp  items.hpp  library.cpp  library.hpp  observer_protocols.hpp  observers.hpp  playback.cpp  playback.hpp  player.cpp  player.hpp  releases.cpp  releases.hpp  requesters.cpp  requesters.hpp  requests.hpp
src/spotify/abstract/: cached_value.hpp  interfaces.hpp  observers.hpp
src/spotify_http_relay/: CMakeLists.txt  spotify_http_relay.cpp  spotify_http_relay.hpp  stdafx.h  utils.cpp  utils.hpp
src/ui/: components.cpp  components.hpp  config_dialog.cpp  config_dialog.hpp  controls.cpp  controls.hpp  dialogs.cpp  dialogs.hpp  events.cpp  events.hpp  notifications.cpp  notifications.hpp  panel.cpp  panel.hpp  player.cpp  player.hpp  player_dialog.cpp  player_dialog.hpp  types.cpp  types.hpp  views.cpp  views.hpp
src/ui/dialogs/: config_backend.cpp  config_backend.hpp  config_general.cpp  config_general.hpp  config_hotkeys.cpp  config_hotkeys.hpp  dialog.cpp  dialog.hpp  menus.cpp  menus.hpp  search.cpp  search.hpp  search_results.cpp  search_results.hpp  waiting.cpp  waiting.hpp
src/ui/dialogs/filters/: albums.cpp  albums.hpp
src/ui/dialogs/settings/: backend.cpp  backend.hpp  caches.cpp  caches.hpp  general.cpp  general.hpp  hotkeys.cpp  hotkeys.hpp
src/ui/views/: album.cpp  album.hpp  albums.cpp  albums.hpp  artist.cpp  artist.hpp  artists.cpp  artists.hpp  collection.cpp  collection.hpp  playlist.cpp  playlist.hpp  playlists.cpp  playlists.hpp  recents.cpp  recents.hpp  root.cpp  root.hpp  sort_dialog.cpp  sort_dialog.hpp  tracks.cpp  tracks.hpp  view.cpp  view.hpp
tests/: CMakeLists.txt  utils.cpp
